# cellsim_34_vcl_mpi

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
cmake/: FindEigen3.cmake  FindMKL.cmake  FindViennaCL.cmake
linux/test/: cs_reduce_min-max.py
pan/: CS_Makefile  JWR_Makefile
pan/test/: cleanup.sh  compare_bin_tol.py  cs_reduce.py  cs_reduce_min-max.py  cs_results_r.py  run_test.sl  run_test_cuda.sl  run_test_mkl.sl
src/: CMakeLists.txt  cCellMesh.cpp  cCellMesh.cu  cCellMesh.h  cGeneric3dModel.cpp  cGeneric3dModel.cu  cGeneric3dModel.h  cMKLSolver.cpp  cMKLSolver.cu  cMKLSolver.h  cVCLSolver.cpp  cVCLSolver.cu  cVCLSolver.h  cell_3d.cpp  cell_3d.cu
test/: CMakeLists.txt  cs.py  cs_compare_peaks.py  cs_reduce_min-max.py  cs_results_r.py  out_N4_p3-p2-p4-1tet.msh  out_N4_p3-p2-p4-2tet.msh  out_N4_p3-p2-p4-4tet.msh  out_N4_p3-p2-p4-5tet.msh  out_N4_p3-p2-p4-6tet.msh  out_N4_p3-p2-p4-7tet.msh  run_test.cmake
